# docid

./: .gitattributes  .gitignore  CHANGELOG.md  Makefile  README.md  generate_image_samples.py  generate_samples.py  generate_universal_samples.py  goal.yaml  pyproject.toml  setup.py  test_all_complete_formats.py  test_all_formats.py  test_all_formats_consistency.py  test_cli.py  test_final_consistency.py  test_samples_consistency.py  test_samples_improved.py  test_samples_mock_ocr.py  test_universal_documents.py
docid/: __init__.py  cli.py  cli_universal.py  dedup.py  document_id.py  document_id_universal.py  ocr_processor.py  pipeline.py  visual_fingerprint.py
docid/extractors/: __init__.py  base.py
examples/: complete_demo.py  demo.py  quality_test.py  web_service.py
samples/: faktura_template.xml  faktura_text.txt  faktura_variant1.txt  faktura_variant2.txt  paragon.txt  umowa.txt
samples/contracts/: umowa_full.html  umowa_full.txt  umowa_full.xml
samples/invoices/: faktura_full.html  faktura_full.txt  faktura_full.xml
samples/receipts/: paragon_full.html  paragon_full.txt  paragon_full.xml
tests/: __init__.py  test_dedup.py  test_document_id.py  test_extractors.py  test_samples_id.py  test_visual_fingerprint.py
